# project-srufm

./: .gitignore  README.md
hardware/: README.md  accent_hardware_runner.py  collect_accent_samples.py  main.py  prompt_words.txt  (+1 more)
speech_recognition_project/: DATASET_PLAN.md  JKUAT_Kiswahili_ASR_Project_Report.tex  Kiswahili_ASR_Project_Report.tex  README.md  main.py  main.tex  pyproject.toml  requirements-embeddings.txt  requirements.txt  streamlit_app.py
speech_recognition_project/config/: default.yaml
speech_recognition_project/data/: metadata.csv
speech_recognition_project/notebooks/: experiments.ipynb  supervisor_presentation.ipynb
speech_recognition_project/scripts/: build_hybrid_accent_metadata.py  import_hf_common_voice_accent.py
speech_recognition_project/src/: __init__.py
speech_recognition_project/src/datasets/: __init__.py  common_voice.py
speech_recognition_project/src/evaluation/: metrics.py
speech_recognition_project/src/features/: __init__.py  mfcc_extraction.py  speech_embeddings.py
speech_recognition_project/src/inference/: __init__.py  predict.py
speech_recognition_project/src/models/: __init__.py  ann_model.py  svm_model.py  train.py
speech_recognition_project/src/preprocessing/: __init__.py  noise_reduction.py  normalization.py  silence_removal.py
speech_recognition_project/src/utils/: __init__.py  audio.py  config.py
speech_recognition_project/tests/: conftest.py  test_common_voice_dataset.py  test_features.py  test_inference.py  test_metrics.py  test_models.py  test_preprocessing.py  test_training_pipeline.py
