[project]
name = "kiswahili-asr"
version = "0.1.0"
description = "Accent-aware isolated-word Kiswahili speech recognition with MFCC features and classical ML models."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "joblib>=1.4.2",
    "librosa>=0.10.2",
    "noisereduce>=3.0.2",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.2.2",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.4.2",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
ann = [
    "tensorflow>=2.16.1,<2.17",
]
mic = [
    "pyaudio>=0.2.14",
]
notebook = [
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
]
ui = [
    "streamlit>=1.36.0",
]
embeddings = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100.1",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
kiswahili-asr = "main:main"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
